BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Rate_Card__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Hourly__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Hourly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the Medical Event</description>
        <label>Medical Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Rate Cards</relationshipLabel>
        <relationshipName>Rate_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Speaker</label>
        <referenceTo>Meeting_Speaker_BMS__c</referenceTo>
        <relationshipLabel>Rate Cards</relationshipLabel>
        <relationshipName>Rate_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Support Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLA Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Rate Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>